--- a/app/scss/blocks/_form.scss
+++ b/app/scss/blocks/_form.scss
@@ -92,6 +92,7 @@
   font-weight: 300;
   font-size: 0.875rem;
   margin-bottom: 0.4375rem;
+  display: inline-block;
   &--inline {
     margin-bottom: 0;
   }
